# aioservicekit

./: .gitignore  MANIFEST.in  Pipfile  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
aioservicekit/: __init__.py  chanels.py  events.py  group.py  groups.py  service.py  services.py  tasks.py  utils.py
examples/: chanel.py  event.py  service-with-timeout.py  service.py
src/: __init__.py  events.py  service.py  utils.py
tests/: test_events.py  test_groups.py  test_services.py
